--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "short-uuid": "^4.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
