--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "mongodb": "^4.13.0",
     "next": "^13.1.2",
@@ -16,7 +14,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --detectOpenHandles"
   },
   "browserslist": {
     "production": [
@@ -31,10 +30,16 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "eslint": "^8.32.0",
     "eslint-config-next": "^13.1.2",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "mongodb-memory-server": "^8.11.4",
+    "node-mocks-http": "^1.12.1",
     "typescript": "^4.9.4"
   }
 }
