--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.2",
     "mongodb": "^4.13.0",
     "next": "^13.1.2",
     "react": "^18.2.0",
