--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "mongodb": "^4.13.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^13.1.2",
+    "next-connect": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "short-uuid": "^4.2.2",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "eslint": "^8.32.0",
